edition = "2023";

package internal.proto.v1.rpc;

option go_package = "github.com/vadicheck/shorturl/internal/proto/v1/rpc";

message StatRequest {
}

message StatResponse {
  int32 urls = 1;
  int32 users = 2;
}
